# RPGEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Demos/CoreLoop/: main.cpp
Demos/CoreLoop/Source/Input/: CMakeLists.txt  KeyboardInput.cpp
Demos/CoreLoop/Source/Processing/: CMakeLists.txt
Demos/Rendering/Source/: CMakeLists.txt
Demos/Rendering/Source/Output/: CMakeLists.txt  RenderingEngine.hpp
Demos/TextInput/Source/: CMakeLists.txt
Demos/TextInput/Source/Rendering/: RenderingEngine.cpp
Documentation/: Flow.drawio
Libraries/: CMakeLists.txt
Libraries/RapidJSON/: CMakeLists.txt
Libraries/SDL_FontCache/: CMakeLists.txt
Resources/: Font.tsj
Resources/Images/: WoodFloor.pxo
Source/: CMakeLists.txt  RenderingEngine.cpp
Source/Art/: Font.pxo
Source/Art/Images/: SandyDirt.pxo
Source/Input/: KeyboardInput.hpp
Source/Output/: RenderingEngine.cpp  RenderingEngine.hpp
Source/Rendering/: RenderingEngine.cpp
